<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RepositoryDetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:titleTextColor="@color/white"
        app:title="@string/details"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/ic_view"
            android:contentDescription="@string/delete_repository"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/icView"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_repository"
            android:layout_gravity="end"
            android:id="@+id/icDeleteRepo"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:layout_width="wrap_content"
        tools:text="Repository Name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:id="@+id/tvRepoName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        tools:text="Repository Name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:id="@+id/tvRepoDescription"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvRepoName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_height="wrap_content"/>
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/tvRepoDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/branches"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/issues"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>